Log file manager APIs that take too long.

Only "very long" API calls are logged to the user's log. Regular "long"
APIs are logged to the drive-internals log.

BUG=904658

Change-Id: Ic959174f9927e7fe398706b8270a60c35df82e70
Reviewed-on: https://chromium-review.googlesource.com/c/1488393
Commit-Queue: Anand Mistry <amistry@chromium.org>
Reviewed-by: Sam McNally <sammc@chromium.org>
Reviewed-by: Luciano Pacheco <lucmult@chromium.org>
Cr-Commit-Position: refs/heads/master@{#635841}
Former-commit-id: c6a932cc94038e905d5b44801a3f67c77faf7b03