chrome/browser/chromeos/extensions/file_manager/file_browser_handler_api.h
@@ -17,6 +17,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 #include <vector>
 
 #include "base/files/file_path.h"
+#include "chrome/browser/chromeos/extensions/file_manager/private_api_base.h"
 #include "extensions/browser/extension_function.h"
 
 class Browser;
@@ -81,7 +82,7 @@ class FileSelectorFactory {
 // The fileBrowserHandlerInternal.selectFile extension function implementation.
 // See the file description for more info.
 class FileBrowserHandlerInternalSelectFileFunction
-    : public UIThreadExtensionFunction {
+    : public extensions::LoggedUIThreadExtensionFunction {
  public:
   // Default constructor used in production code.
   // It will create its own FileSelectorFactory implementation, and set the
